# side-by-side-bom

./: .gitignore  languages.js  languages.py  main.py  mainDC.py  pyproject.toml  side_by_side_bom.docx  side_by_side_dc.docx  ~$de_by_side_bom.docx
dc-english/: 0.txt  1.txt  10.txt  101.txt  104.txt  106.txt  107.txt  109.txt  11.txt  110.txt  111.txt  112.txt  114.txt  115.txt  116.txt  12.txt  120.txt  123.txt  124.txt  127.txt  128.txt  13.txt  130.txt  131.txt  133.txt  134.txt  136.txt  138.txt  14.txt  15.txt  17.txt  20.txt  21.txt  23.txt  24.txt  25.txt  29.txt  3.txt  30.txt  33.txt  (+40 more)
dc/dc-english/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  117.txt  118.txt  119.txt  12.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  135.txt  136.txt  (+96 more)
dc/dc-french/: 1.txt  2.txt
dc/dc-spanish/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+21 more)
dc2/dc-english/: 0.txt  100.txt  102.txt  103.txt  105.txt  108.txt  113.txt  117.txt  118.txt  119.txt  121.txt  122.txt  125.txt  126.txt  129.txt  132.txt  135.txt  137.txt  16.txt  18.txt  19.txt  2.txt  22.txt  26.txt  (+38 more)
sidebysides/: german-spanish.docx
(+2236 files in other folders)
